--- a/code/device/barter2/app/src/main/res/values/strings.xml
+++ b/code/device/barter2/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">barter2</string>
-    <!-- Strings related to login -->
+    <!-- Strings related to login and sign up -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -8,11 +8,11 @@
     <string name="action_sign_up">Sign Up</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
+    <string name="error_password_not_equal">password not equal</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="user_name_illegal">"user name is illegal"</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_signup">Sign Up</string>
     <string name="title_activity_my_account">MyAccountActivity</string>
